dark mode fix

--- a/assets/sass/components/notification.scss
+++ b/assets/sass/components/notification.scss
@@ -24,7 +24,7 @@
 }
 
 .notification {
-  color: var(--colour-heading);
+  //color: var(--colour-body);
   display: flex;
 
 
